modify content page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body bgcolor="#000000">
-        <h2 style="color: #FFFFFF; text-align: center;">En construcción...</h2>
-    </body>
-</html>
+---
+title: Kotlin La Paz
+layout: default
+---
+<section class="box special">
+	<header class="major">
+		<h2>Kotlin User Group La Paz</h2>
+		<p>Comunidad destinada a dar a conocer todos los beneficios<br />
+		que tiene Kotlin como lenguaje de programación.</p>
+	</header>
+	<span class="image featured"><img src="/assets/images/pic01.jpg" alt="" /></span>
+</section>
+
+<section class="box special features">
+	<div class="features-row">
+		<section>
+			<span class="icon major fa-bolt accent2"></span>
+			<h3>Meetups</h3>
+			<p>Organizamos Meetups presenciales para tenerte al tanto de todas las novedades que tiene Kotlin como lenguaje de programación.</p>
+		</section>
+		<section>
+			<span class="icon major fa-area-chart accent3"></span>
+			<h3>Trainings</h3>
+			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+		</section>
+	</div>
+	<div class="features-row">
+		<section>
+			<span class="icon major fa-cloud accent4"></span>
+			<h3>Events</h3>
+			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+		</section>
+		<section>
+			<span class="icon major fa-lock accent5"></span>
+			<h3>Conferences</h3>
+			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+		</section>
+	</div>
+</section>
+
+<div class="row">
+	<div class="6u">
+
+		<section class="box special">
+			<span class="image featured"><img src="/assets/images/pic02.jpg" alt="" /></span>
+			<h3>Sed lorem adipiscing</h3>
+			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+			<ul class="actions">
+				<li><a href="#" class="button alt">Learn More</a></li>
+			</ul>
+		</section>
+
+	</div>
+	<div class="6u">
+
+		<section class="box special">
+			<span class="image featured"><img src="/assets/images/pic03.jpg" alt="" /></span>
+			<h3>Accumsan integer</h3>
+			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+			<ul class="actions">
+				<li><a href="#" class="button alt">Learn More</a></li>
+			</ul>
+		</section>
+
+	</div>
+</div>
