--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: default
 ---
 <section class="box special">
 	<header class="major">
-		<h2>Kotlin User Group La Paz</h2>
+		<h2>Kotlin User Group La Paz</br>
+		Kotlin La Paz</h2>
 		<p>Comunidad destinada a dar a conocer todos los beneficios<br />
 		que tiene Kotlin como lenguaje de programación.</p>
 	</header>
