Changes in page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
-title: Kotlin La Paz
+title: Alpha
 layout: default
 ---
 <section class="box special">
 	<header class="major">
-		<h2>Kotlin User Group La Paz</br>
-		Kotlin La Paz</h2>
-		<p>Comunidad destinada a dar a conocer todos los beneficios<br />
-		que tiene Kotlin como lenguaje de programación.</p>
+		<h2>Introducing the ultimate mobile app
+		<br />
+		for doing stuff with your phone</h2>
+		<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
+		adipiscing nunc adipiscing. Condimentum turpis massa.</p>
 	</header>
 	<span class="image featured"><img src="/assets/images/pic01.jpg" alt="" /></span>
 </section>
@@ -16,24 +17,24 @@ layout: default
 	<div class="features-row">
 		<section>
 			<span class="icon major fa-bolt accent2"></span>
-			<h3>Meetups</h3>
-			<p>Organizamos Meetups presenciales para tenerte al tanto de todas las novedades que tiene Kotlin como lenguaje de programación.</p>
+			<h3>Magna etiam</h3>
+			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 		</section>
 		<section>
 			<span class="icon major fa-area-chart accent3"></span>
-			<h3>Trainings</h3>
+			<h3>Ipsum dolor</h3>
 			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 		</section>
 	</div>
 	<div class="features-row">
 		<section>
 			<span class="icon major fa-cloud accent4"></span>
-			<h3>Events</h3>
+			<h3>Sed feugiat</h3>
 			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 		</section>
 		<section>
 			<span class="icon major fa-lock accent5"></span>
-			<h3>Conferences</h3>
+			<h3>Enim phasellus</h3>
 			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 		</section>
 	</div>
