--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 		<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
 		adipiscing nunc adipiscing. Condimentum turpis massa.</p>
 	</header>
-	<span class="image featured"><img src="/assets/images/pic01.jpg" alt="" /></span>
+	<span class="image featured"><img src="{{ site.baseurl }}/assets/images/pic01.jpg" alt="" /></span>
 </section>
 
 <section class="box special features">
@@ -44,7 +44,7 @@ layout: default
 	<div class="6u">
 
 		<section class="box special">
-			<span class="image featured"><img src="/assets/images/pic02.jpg" alt="" /></span>
+			<span class="image featured"><img src="{{ site.baseurl }}/assets/images/pic02.jpg" alt="" /></span>
 			<h3>Sed lorem adipiscing</h3>
 			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 			<ul class="actions">
@@ -56,7 +56,7 @@ layout: default
 	<div class="6u">
 
 		<section class="box special">
-			<span class="image featured"><img src="/assets/images/pic03.jpg" alt="" /></span>
+			<span class="image featured"><img src="{{ site.baseurl }}/assets/images/pic03.jpg" alt="" /></span>
 			<h3>Accumsan integer</h3>
 			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 			<ul class="actions">
